# vscode-mixed-light-theme

./: .vscodeignore  CHANGELOG.md  README.md  package.json
.github/workflows/: release.yml
demos/: CMakeLists.txt  Dockerfile  Makefile  demo.c  demo.cpp  demo.css  demo.go  demo.html  demo.ini  demo.java  demo.js  demo.json  demo.jsx  demo.md  demo.py  demo.sh  demo.sql  demo.svelte  demo.toml  demo.ts  demo.tsx  demo.xml  demo.yaml  nginx.conf
drafts/: mixed-one-light-color-theme.json
templates/: solarized-color.jsonc
themes/: mixed-one-light-color-theme.json  mixed-solarized-light-color-theme.json  mixed-solarized-light.json  one-light-color-theme.json  one-light.json
